tests/snapshots/run_wpt_conformance__litert_reduceLogSum_float16_4D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum.https.any.js reduceLogSum float16 4D tensor options.axes, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceLogSum { input: 0, options: Some(MLReduceOptions { label: "", axes: Some([0, 2]), keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceLogSumInput: f16[2, 2, 2, 3];
  }

  nodes {
    [reduceLogSumOutput] = reduceLogSum(reduceLogSumInput, axes=[0, 2], keepDimensions=false, label="");
  }

  outputs { reduceLogSumOutput; }
}
